--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
   <head>
     <meta charset="utf-8">
-    <link rel="icon" href="static/favicon.ico" type="image/ico" />
+    <!-- <link rel="icon" href="static/favicon.ico" type="image/ico" /> -->
     <meta name="format-detection" content="telephone=no" />
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
     <meta name="apple-mobile-web-app-capable" content="no" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta http-equiv="Cache-Control" content="must-revalidate,no-cache" />
-    <title>模板项目</title>
+    <title>CC卡美</title>
     <link rel="stylesheet" type="text/css" href="static/style.css" />
     <link rel="stylesheet" type="text/css" href="static/font-awesome.min.css" />
     <script src="static/flexible.js?v=1.1.1" type="text/javascript" charset="utf-8"></script>
