--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>CC卡美</title>
     <link rel="stylesheet" type="text/css" href="static/style.css" />
     <link rel="stylesheet" type="text/css" href="static/font-awesome.min.css" />
+    <script src="static/jweixin-1.0.0.js" type="text/javascript" charset="utf-8"></script>
     <script src="static/flexible.js?v=1.1.1" type="text/javascript" charset="utf-8"></script>
     <script src="static/config.js?v=1.11.1" type="text/javascript" charset="utf-8"></script>
     <script src="static/index.js?v=1.11.1" type="text/javascript" charset="utf-8"></script>
