--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <!-- <link rel="icon" href="static/favicon.ico" type="image/ico" /> -->
+    <link rel="icon" href="static/favicon.ico" type="image/ico" />
     <meta name="format-detection" content="telephone=no" />
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
     <meta name="apple-mobile-web-app-capable" content="no" />
