--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-capable" content="no" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta http-equiv="Cache-Control" content="must-revalidate,no-cache" />
-    <title>CC卡美</title>
+    <title>CC卡美珠宝</title>
     <link rel="stylesheet" type="text/css" href="static/style.css" />
     <link rel="stylesheet" type="text/css" href="static/font-awesome.min.css" />
     <script src="static/jweixin-1.0.0.js" type="text/javascript" charset="utf-8"></script>
